tests/fixtures/invalid/none_pow_dict.py
# Cannot power None and Dict[str, int]
x: None = None ** {"a": 1}
